[package]
name = "invoicing_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
invoicing_lib = {path = "../invoicing_lib"}
prettytable-rs = "0.10.0"
serde = { version = "1.0.201", features = ["derive"] }
toml = "0.8.12"
